[tool.poetry]
name = "quantization"
version = "0.1.0"
description = ""
authors = ["Ssuwani <jsuwan961205@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
torch = "^2.5.1"
torchvision = "^0.20.1"
matplotlib = "^3.9.2"
onnx = "^1.17.0"
onnxruntime = "^1.19.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
